# Smile

./: .gitignore  CMakeLists.txt  README.md  test.sh
documents/SmileDocumentation/: Makefile
documents/SmileDocumentation/source/: Abbreviations.rst  DataEtcSemantic.rst  InterpSemantic.rst  Introduction.rst  ModelReference.rst  ModuleStructure.rst  References.rst  SemModel.rst  SmileReference.rst  SmileTranslator.rst  TypeSystem.rst  conf.py  index.rst
documents/draft/: 200414.txt  Export.rst  PCT-2020-16.docx  bodySyntax.rst
documents/latex-ru/: aipp-factors.aux  aipp-factors.tex  biblio.aux  biblio.tex  conclusion.tex  core.aux  core.tex  core.toc  examples.tex  intro.aux  intro.tex  paradigm-classification.aux  smile.tex  static-typed-model.aux  static-typed-model.tex
documents/old/PifagorVerOfSmile/source/: Introduction.rst  ModelReference.rst  ModuleSystem.rst  More.rst  References.rst  SemModel.rst  SmileReference.rst  TypeSystem.rst  index.rst
documents/old/smileDoc/: ModelReference.rst  ModuleSystem.rst  Pralanguage.rst  References.rst  SemModel.rst  SmileFunctions.rst  SmileReference.rst  SmileTranslator.rst  TypeSystem.rst
documents/other/: notes.rst  Алеева-ПАВТ2019.okular
package/: export
package/src/: Apostrof  BackSlash  False  FuncAdd01  FuncInc01  FuncSenSignal01  FuncSenSignal02  FuncSenSignal03  IgorWasBorn  LudaWasBorn  Quote1  Quote2  Real01  Signal  Tab  True  Z  add-@float@float  add-@int@int  circle  cyrillic-ya  five  func-with-parenthesis  func01  func01a  func01b  func02  func03  func04  iAmVaryOld  iWasBorn  identity-function  is_true  min  multiline-function  newBool  newFloat  newInt  newSignal  pi  (+3 more)
package/tmp/: export-old
scripts/: artefact_compile.py  package_compile.py
src/compiler/: CMakeLists.txt  parser.cpp  parser.h  scanner.cpp  tlt.cpp  util.cpp
src/expcompiler/: CMakeLists.txt  parser.cpp  parser.h  scanner.cpp  tlt.cpp  util.cpp
src/launcher/: CMakeLists.txt  main.cpp
src/smodel/: CMakeLists.txt  actor.cpp  actor.h  const.cpp  const.h  declaration.cpp  declaration.h  func.cpp  func.h  funcdeclaration.cpp  funcdeclaration.h  nametable.cpp  nametable.h  smodel.cpp  smodel.h  struct.cpp  struct.h  tuple.cpp  tuple.h  type.cpp  type.h
src/util/: CMakeLists.txt  utf8.cpp  utf8.h
tests/const/: export
tests/const/src/: bool_false_pre_const  bool_true_post  bool_true_post_const  bool_true_pre  bool_true_pre_const  char_BackSlash_pre  char_Quote_post  char_Quote_post_const  char_Z_pre_const  char_apostrof_pre_const  char_lf_pre  char_tab_pre_const  float_minus_5_14e34_pre_const  float_pi_post_const  float_pi_pre  int_10_pre  int_1956_pre_const  int_1957_pre_const  int_1982_pre_const  int_5_post  int_65_post_const  int_67_post  signal_post  signal_post_const  signal_pre  signal_pre_const
tests/types/: export
tests/types/src/: bool_pre_at  bool_pre_type  float_post_at  float_post_type  int_pre_at  int_pre_at2  int_pre_type  signal_post_at   signal_pre_at  signal_pre_type  tuple_pre_at  tuple_pre_type
